# time_server

./: AUTHORS  Makefile.am  configure.ac
man/: Makefile.am  install.sh  time_server.1
src/: Makefile.am  bash_color.h  bash_color_test.cpp  main.cpp  main.hpp  time_server.cpp  time_server.hpp
